k8s/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: devboard

spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
