k8s/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: devboard

spec:
  selector:
    app: frontend
  ports:
    - port: 4173
      targetPort: 4173
  type: ClusterIP
